--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           totalClients = message.totalClients;
           console.log(`Client ${message.clientId} disconnected from code: ${code}, total: ${totalClients}`);
           usernames.delete(message.clientId);
-          console.log(`Removed username for client ${message.clientId}, usernames: ${[...usenames.entries()]}`);
+          console.log(`Removed username for client ${message.clientId}, usernames: ${[...usernames.entries()]}`);
           cleanupPeerConnection(message.clientId);
           updateMaxClientsUI();
         }
@@ -293,9 +293,8 @@
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
-          { urls: 'stun:openrelay.metered.ca:80' },
-          { urls: 'stun:stun.relay.metered.ca:80' },
-          { urls: 'stun:stun.freeswitch.org:3478' },
+          { urls: 'stun:stun.l.google.com:19302' },
+          { urls: 'stun:stun1.l.google.com:19302' },
           {
             urls: 'turn:global.relay.metered.ca:443?transport=tcp',
             username: '8008f3d422fbe49ca4157b23',
