--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
       overflow-y: auto;
       scroll-behavior: auto;
     }
-    #sendButton {
-      line-height: 1;
-    }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
@@ -37,16 +34,14 @@
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded bg-white"></div>
-        <div class="flex items-center gap-2">
-          <input id="messageInput" type="text" class="border border-gray-300 p-2 flex-grow rounded" placeholder="Type a message...">
-          <button id="sendButton" class="bg-blue-500 text-white w-10 h-10 flex items-center justify-center:Set up rate limiting for messages rounded-full hover:bg-blue-600">📤</button>
-        </div>
+        <input id="messageInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Type a message...">
+        <button id="sendButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600">Send</button>
       </div>
       <div id="connectContainer" class="hidden">
         <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
         <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)">
         <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600">Connect</button>
-        <button id="backButtonConnect" class="bg-gray-500 text-white px"Initiate WebSocket connection-4 py-2 rounded w-full mt-2 hover:bg-gray-600">Back</button>
+        <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600">Back</button>
       </div>
       <div class="text-center mt-4">
         <a href="https://github.com/cooptroop1/anonmess/wiki/Troubleshooting" target="_blank" class="text-blue-500 hover:underline">Connection issues? Get help</a>
@@ -98,7 +93,6 @@
     let processedAnswers = new Set();
     let username = localStorage.getItem('username') || '';
     let usernames = new Map();
-    const messageRateLimits = new Map(); // Track messages per peer for rate limiting
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -295,8 +289,9 @@
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
-          { urls: 'stun:stun.l.google.com:19302' },
-          { urls: 'stun:stun1.l.google.com:19302' },
+          { urls: 'stun:openrelay.metered.ca:80' },
+          { urls: 'stun:stun.relay.metered.ca:80' },
+          { urls: 'stun:stun.freeswitch.org:3478' },
           {
             urls: 'turn:global.relay.metered.ca:443?transport=tcp',
             username: '8008f3d422fbe49ca4157b23',
@@ -438,21 +433,6 @@
       };
 
       dataChannel.onmessage = (event) => {
-        // Rate limiting: Allow max 10 messages per second per peer
-        const now = performance.now();
-        const rateLimit = messageRateLimits.get(targetId) || { count: 0, startTime: now };
-        if (now - rateLimit.startTime >= 1000) {
-          // Reset count every second
-          rateLimit.count = 0;
-          rateLimit.startTime = now;
-        }
-        rateLimit.count += 1;
-        messageRateLimits.set(targetId, rateLimit);
-        if (rateLimit.count > 10) {
-          console.warn(`Rate limit exceeded for ${targetId}: ${rateLimit.count} messages in 1s, dropping message`);
-          return;
-        }
-
         let data;
         try {
           data = JSON.parse(event.data);
@@ -496,7 +476,6 @@
       dataChannel.onclose = () => {
         console.log(`Data channel closed with ${targetId}`);
         cleanupPeerConnection(targetId);
-        messageRateLimits.delete(targetId); // Clear rate limit data on disconnect
       };
     }
 
@@ -604,7 +583,6 @@
       clearTimeout(connectionTimeouts.get(targetId));
       connectionTimeouts.delete(targetId);
       retryCounts.delete(targetId);
-      messageRateLimits.delete(targetId); // Clear rate limit data
       isConnected = dataChannels.size > 0;
       updateMaxClientsUI();
     }
@@ -736,7 +714,6 @@
       processedMessageIds.clear();
       processedAnswers.clear();
       usernames.clear();
-      messageRateLimits.clear(); // Clear rate limit data
       isConnected = false;
       isInitiator = false;
       maxClients = 2;
