--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Anonymous Chat</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
+  <style>
+    #messages {
+      display: flex;
+      flex-direction: column-reverse;
+      overflow-y: auto;
+      scroll-behavior: auto;
+    }
+  </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
   <div class="flex w-full max-w-lg">
@@ -24,6 +32,7 @@
       </div>
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <div id="chatContainer" class="hidden">
+        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded bg-white"></div>
         <input id="messageInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Type a message...">
         <button id="sendButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600">Send</button>
@@ -34,7 +43,6 @@
         <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600">Connect</button>
         <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600">Back</button>
       </div>
-      <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mt-4 hidden hover:bg-red-600">New Session</button>
       <div class="text-center mt-4">
         <a href="https://github.com/cooptroop1/anonmess/wiki/Troubleshooting" target="_blank" class="text-blue-500 hover:underline">Connection issues? Get help</a>
       </div>
@@ -83,7 +91,7 @@
     let candidatesQueues = new Map();
     let processedMessageIds = new Set();
     let processedAnswers = new Set();
-    let username = localStorage.getItem('username') || null;
+    let username = localStorage.getItem('username') || '';
     let usernames = new Map();
 
     const statusElement = document.getElementById('status');
@@ -95,8 +103,8 @@
     const newSessionButton = document.getElementById('newSessionButton');
     const maxClientsContainer = document.getElementById('maxClientsContainer');
     statusElement.textContent = 'Start a new chat or connect to an existing one';
-    document.getElementById('usernameInput').value = username || '';
-    document.getElementById('usernameConnectInput').value = username || '';
+    document.getElementById('usernameInput').value = username;
+    document.getElementById('usernameConnectInput').value = username;
 
     const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
     console.log('WebSocket created');
@@ -107,28 +115,28 @@
     };
 
     socket.onerror = (error) => {
-      statusElement.textContent = 'WebSocket error. Please try again.';
       console.error('WebSocket error:', error);
       connectionTimeouts.forEach((timeout) => clearTimeout(timeout));
     };
 
     socket.onclose = () => {
-      statusElement.textContent = 'Connection lost. Reconnecting...';
       console.error('WebSocket closed, attempting reconnect');
       setTimeout(() => {
         const newSocket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
         newSocket.onopen = () => {
           console.log('Reconnected, rejoining with code: ' + code);
           newSocket.send(JSON.stringify({ type: 'join', code, username }));
-          statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} users)` : 'Waiting for connection...';
+          statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
         };
         newSocket.onerror = (error) => {
-          statusElement.textContent = 'Reconnect failed. Please refresh.';
           console.error('Reconnect error:', error);
         };
         newSocket.onclose = socket.onclose;
         newSocket.onmessage = socket.onmessage;
-        socket = newSocket;
+        Object.defineProperty(window, 'socket', {
+          value: newSocket,
+          writable: true
+        });
       }, 5000);
     };
 
@@ -161,7 +169,7 @@
         }
         if (message.type === 'init') {
           clientId = message.clientId;
-          maxClients = message.maxClients;
+          maxClients = message.clientId === clientId ? message.maxClients : maxClients;
           isInitiator = message.isInitiator;
           totalClients = 1;
           console.log(`Initialized client ${clientId}, username: ${username}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
@@ -253,13 +261,7 @@
     }
 
     function updateMaxClientsUI() {
-      statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} users)` : 'Waiting for connection...';
-      if (totalClients >= maxClients) {
-        statusElement.textContent += ' (Chat is full)';
-        statusElement.classList.add('text-red-600');
-      } else {
-        statusElement.classList.remove('text-red-600');
-      }
+      statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} connections)` : 'Waiting for connection...';
       const inputs = document.querySelectorAll('input[name="maxClients"]');
       inputs.forEach(input => {
         input.checked = parseInt(input.value) === maxClients;
@@ -287,28 +289,16 @@
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
-          { urls: 'stun:stun.l.google.com:19302' },
-          { urls: 'stun:stun1.l.google.com:19302' },
-          { urls: 'stun:stun2.l.google.com:19302' },
-          { urls: 'stun:stun3.l.google.com:19302' },
-          { urls: 'stun:stun4.l.google.com:19302' },
-          { urls: 'stun:stun.stunprotocol.org:3478' },
-          { urls: 'stun:stun.nextcloud.com:443' },
+          { urls: 'stun:openrelay.metered.ca:80' },
+          { urls: 'stun:stun.relay.metered.ca:80' },
+          { urls: 'stun:stun.freeswitch.org:3478' },
           {
-            urls: [
-              'turn:global.relay.metered.ca:80',
-              'turn:global.relay.metered.ca:443',
-              'turn:global.relay.metered.ca:80?transport=tcp',
-              'turns:global.relay.metered.ca:443?transport=tcp'
-            ],
+            urls: 'turn:global.relay.metered.ca:443?transport=tcp',
             username: '8008f3d422fbe49ca4157b23',
             credential: 'E7rLb3LegFMDdjem'
           },
           {
-            urls: [
-              'turn:relay1.expressturn.com:3480?transport=udp',
-              'turn:relay1.expressturn.com:3480?transport=tcp'
-            ],
+            urls: 'turn:relay1.expressturn.com:3478?transport=tcp',
             username: '000000002066560922',
             credential: 'KbPraDRQJfdBPGf4zBA7GJp31qY='
           }
@@ -336,7 +326,11 @@
       };
 
       peerConnection.onicecandidateerror = (event) => {
-        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}, url=${event.url}, network=${navigator.connection?.type || 'unknown'}`);
+        if (event.errorCode === 701 && peerConnection.connectionState === 'connected') {
+          console.debug(`Non-critical ICE error for ${targetId}: ${event.errorText}, url=${event.url}, timestamp=${new Date().toISOString()}`);
+        } else {
+          console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}, url=${event.url}, network=${navigator.connection?.type || 'unknown'}, timestamp=${new Date().toISOString()}`);
+        }
       };
 
       peerConnection.onicegatheringstatechange = () => {
@@ -347,7 +341,6 @@
         console.log(`Connection state for ${targetId}: ${peerConnection.connectionState}`);
         if (peerConnection.connectionState === 'disconnected' || peerConnection.connectionState === 'failed') {
           console.error(`Connection failed with ${targetId}: ${peerConnection.connectionState}`);
-          statusElement.textContent = 'Connection failed. Retrying...';
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
           if (retryCount < maxRetries) {
@@ -355,7 +348,7 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection failed after retries. Please try a new session.';
+            console.error('Connection failed after retries for client:', targetId);
           }
         } else if (peerConnection.connectionState === 'connected') {
           console.log(`WebRTC connection established with ${targetId} for code: ${code}`);
@@ -400,13 +393,12 @@
           });
         }).catch(error => {
           console.error(`Error creating offer for ${targetId}:`, error);
-          statusElement.textContent = 'Failed to create offer. Please try again.';
         });
       }
 
       const timeout = setTimeout(() => {
         if (!dataChannels.get(targetId) || dataChannels.get(targetId).readyState !== 'open') {
-          console.log(`Connection timed out with ${targetId} for code: ${code}`);
+          console.error(`Connection timed out with ${targetId} for code: ${code}`);
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
           if (retryCount < maxRetries) {
@@ -414,7 +406,7 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection failed after retries. Please try a new session.';
+            console.error('Connection failed after retries for client:', targetId);
           }
         }
       }, 10000);
@@ -425,7 +417,7 @@
       dataChannel.onmessage = null;
       dataChannel.onopen = null;
       dataChannel.onerror = null;
-      dataChannel.onclose = () => {};
+      dataChannel.onclose = null;
 
       dataChannel.onopen = () => {
         console.log(`Data channel opened with ${targetId} for code: ${code}, state: ${dataChannel.readyState}`);
@@ -462,7 +454,10 @@
         const messages = document.getElementById('messages');
         const isSelf = senderUsername === username;
         const className = isSelf ? 'text-blue-600' : 'text-gray-600';
-        messages.innerHTML += `<div class="${className}">${senderUsername}: ${data.content}</div>`;
+        const messageDiv = document.createElement('div');
+        messageDiv.className = className;
+        messageDiv.textContent = `${senderUsername}: ${data.content}`;
+        messages.prepend(messageDiv);
         messages.scrollTop = messages.scrollHeight;
         if (isInitiator) {
           dataChannels.forEach((dc, id) => {
@@ -510,7 +505,6 @@
         candidatesQueues.set(targetId, []);
       } catch (error) {
         console.error(`Error handling offer from ${targetId}:`, error);
-        statusElement.textContent = 'Failed to process offer. Please try again.';
       }
     }
 
@@ -548,7 +542,6 @@
         candidatesQueues.set(targetId, []);
       } catch (error) {
         console.error(`Error setting remote description for answer from ${targetId}:`, error);
-        statusElement.textContent = 'Failed to process answer. Please try again.';
       }
     }
 
@@ -564,7 +557,7 @@
       } else {
         console.log(`Queuing ICE candidate for ${targetId}`);
         const queue = candidatesQueues.get(targetId) || [];
-        queue.push(candidate);
+        queue.push({ type: 'candidate', candidate });
         candidatesQueues.set(targetId, queue);
       }
     }
@@ -609,7 +602,10 @@
             }
           });
           const messages = document.getElementById('messages');
-          messages.innerHTML += `<div class="text-blue-600">${username}: ${content}</div>`;
+          const messageDiv = document.createElement('div');
+          messageDiv.className = 'text-blue-600';
+          messageDiv.textContent = `${username}: ${content}`;
+          messages.prepend(messageDiv);
           messages.scrollTop = messages.scrollHeight;
           document.getElementById('messageInput').value = '';
           processedMessageIds.add(messageId);
@@ -690,15 +686,19 @@
 
     document.getElementById('sendButton').onclick = () => {
       const messageInput = document.getElementById('messageInput');
-      const message = messageInput.value;
-      sendMessage(message);
+      const message = messageInput.value.trim();
+      if (message) {
+        sendMessage(message);
+      }
     };
 
     document.getElementById('messageInput').addEventListener('keydown', (event) => {
       if (event.key === 'Enter') {
         event.preventDefault();
-        const message = event.target.value;
-        sendMessage(message);
+        const message = event.target.value.trim();
+        if (message) {
+          sendMessage(message);
+        }
       }
     });
 
@@ -726,8 +726,8 @@
       console.log('New session started');
       document.getElementById('messages').innerHTML = '';
       document.getElementById('messageInput').value = '';
-      document.getElementById('usernameInput').value = username || '';
-      document.getElementById('usernameConnectInput').value = username || '';
+      document.getElementById('usernameInput').value = username;
+      document.getElementById('usernameConnectInput').value = username;
       document.getElementById('codeInput').value = '';
       initialContainer.classList.remove('hidden');
       usernameContainer.classList.add('hidden');
