--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
           { urls: 'stun:stun.l.google.com:19302' },
           { urls: 'stun:stun1.l.google.com:19302' },
           {
-            urls: ['turn:global.relay.metered.ca:443?transport=tcp', 'turn:global.relay.metered.ca:80?transport=udp'],
-            username: '9f5c9f9b6a2b4e3c8d1e2f7a',
-            credential: 'aB3kL9mP2qR7tY5u'
+            urls: 'turn:global.relay.metered.ca:443?transport=tcp',
+            username: '8008f3d422fbe49ca4157b23',
+            credential: 'E7rLb3LegFMDdjem'
           },
           {
-            urls: ['turn:relay1.expressturn.com:3478?transport=tcp', 'turn:relay1.expressturn.com:3478?transport=udp'],
-            username: 'ef2b9c4d6e8f1a3b',
-            credential: 'xY7zP4qW9mK2tJ8r'
+            urls: 'turn:relay1.expressturn.com:3478?transport=tcp',
+            username: '000000002066560922',
+            credential: 'KbPraDRQJfdBPGf4zBA7GJp31qY='
           }
         ],
         iceTransportPolicy: 'all'
